<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_view_margin">

    <TextView
        android:id="@+id/name_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name_head" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_hint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/price_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price_head" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/quantity_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_quantity_head" />

    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/supplier_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_supplier_head" />

    <EditText
        android:id="@+id/product_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_supplier_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/supplier_contact_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_supplier_contact_head" />

    <EditText
        android:id="@+id/product_supplier_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_supplier_contact_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/mandatory_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_mandatory_data" />

    <Button
        android:id="@+id/save_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_product" />

</LinearLayout>